--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,8 @@ jobs:
       - name: Clone OpenWrt source
         run: git clone --depth=1 https://github.com/openwrt/openwrt openwrt
 
-      - name: Copy custom packages to OpenWrt package folder
-        run: |
-          mkdir -p openwrt/package/custom
-          cp -r custom_deps/* openwrt/package/custom/
+      - name: Replace feeds.conf.default with custom version
+        run: cp build/feeds.conf.default openwrt/feeds.conf.default
 
       - name: Prepare feeds (update & install all)
         run: |
@@ -31,10 +29,15 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      - name: Run ext_packages.sh to clone plugins (如果你有这个脚本)
+      - name: Copy custom packages to OpenWrt package folder
+        run: |
+          mkdir -p openwrt/package/custom
+          cp -r custom_deps/* openwrt/package/custom/
+
+      - name: Run ext_packages.sh to clone plugins (optional)
         run: bash scripts/ext_packages.sh || echo "no ext_packages.sh script, skipping"
 
-      - name: Run customization script (set timezone, hostname, IP, password)
+      - name: Run customization script (optional)
         run: bash scripts/customize.sh || echo "no customize.sh script, skipping"
 
       - name: Build OpenWrt firmware
