--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    timeout-minutes: 360
 
     steps:
       - name: Checkout your repository
@@ -15,7 +16,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential clang flex g++ gawk gcc-multilib gettext \
-            libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev python3-setuptools wget git
+            libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
+            python3-setuptools wget git
 
       - name: Clone OpenWrt source
         run: git clone --depth=1 https://github.com/openwrt/openwrt openwrt
@@ -42,7 +44,7 @@ jobs:
         run: cp config/.config openwrt/.config
 
       - name: Run customize script (timezone, IP, theme)
-        run: bash config/customize.sh
+        run: bash config/customize.sh || echo "No customize.sh found"
 
       - name: Run extra plugin fetcher (optional)
         run: bash scripts/ext_packages.sh || echo "No ext_packages.sh script found"
@@ -50,7 +52,9 @@ jobs:
       - name: Cache downloads
         uses: actions/cache@v4
         with:
-          path: openwrt/dl
+          path: |
+            openwrt/dl
+            openwrt/tmp
           key: dl-cache-${{ hashFiles('config/.config') }}
           restore-keys: |
             dl-cache-
@@ -59,8 +63,9 @@ jobs:
         run: |
           cd openwrt
           make defconfig
-          make download -j$(nproc)
-          make -j$(nproc) || make -j1 V=s
+          make download -j2
+          nohup bash -c "while true; do echo '[CI] Building...'; sleep 60; done" &
+          make -j2 || make -j1 V=s 2>&1 | tee build.log
 
       - name: Upload firmware
         uses: actions/upload-artifact@v4
