--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,17 @@ jobs:
       - name: Checkout your repository
         uses: actions/checkout@v4
 
+      - name: Free up disk space
+        run: |
+          echo "Before cleanup:"
+          df -h
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/hostedtoolcache
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/share/swift
+          echo "After cleanup:"
+          df -h
+
       - name: Setup build dependencies
         run: |
           sudo apt-get update
@@ -59,11 +70,19 @@ jobs:
           restore-keys: |
             dl-cache-
 
-      - name: Start building
+      - name: Generate config
         run: |
           cd openwrt
           make defconfig
+
+      - name: Download source packages
+        run: |
+          cd openwrt
           make download -j2
+
+      - name: Start compiling
+        run: |
+          cd openwrt
           make -j2 V=s 2>&1 | tee build.log
 
       - name: Upload firmware
