--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,99 +1,94 @@
-name: Build OpenWrt-X86
+name: Build OpenWrt x86_64
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
-    timeout-minutes: 360
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout your repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Free up disk space
         run: |
-          echo "Before cleanup:"
-          df -h
-          sudo rm -rf /usr/local/lib/android
-          sudo rm -rf /opt/hostedtoolcache
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /usr/share/swift
-          echo "After cleanup:"
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+          sudo apt-get clean
           df -h
 
-      - name: Setup build dependencies
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential clang flex g++ gawk gcc-multilib gettext \
-            libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev \
-            python3-setuptools wget git
+          sudo apt update
+          sudo apt install -y build-essential clang flex bison g++ gawk \
+            gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
+            python3-distutils rsync unzip zlib1g-dev file wget python3-pyelftools ccache
 
-      - name: Clone OpenWrt source
-        run: git clone --depth=1 https://github.com/openwrt/openwrt openwrt
-
-      - name: Replace default feeds.conf
-        run: cp config/feeds.conf.default openwrt/feeds.conf.default
-
-      - name: Clean feeds
+      - name: Prepare large disk area
         run: |
+          rm -rf openwrt
+          mkdir -p /mnt/openwrt
+          ln -s /mnt/openwrt ./openwrt
+
+      - name: Clone latest OpenWrt source
+        run: |
+          git clone https://github.com/openwrt/openwrt.git --depth=1 openwrt
           cd openwrt
-          ./scripts/feeds clean
+          cp ../config/feeds.conf.default ./feeds.conf.default
 
-      - name: Update feeds
+      - name: Update & install feeds
         run: |
           cd openwrt
           ./scripts/feeds update -a
-
-      - name: Install feeds
-        run: |
-          cd openwrt
           ./scripts/feeds install -a
 
-      - name: Copy default config
-        run: cp config/.config openwrt/.config
+      - name: Copy config and custom scripts
+        run: |
+          cp config/.config openwrt/.config
+          cp config/customize.sh openwrt/
+          cp -r scripts openwrt/scripts
+          chmod +x openwrt/customize.sh openwrt/scripts/*.sh
 
-      - name: Run customize script (timezone, IP, theme)
-        run: bash config/customize.sh || echo "No customize.sh found"
+      - name: Run ext_packages.sh if exists
+        run: |
+          cd openwrt
+          if [ -f scripts/ext_packages.sh ]; then
+            ./scripts/ext_packages.sh
+          else
+            echo "No ext_packages.sh found"
+          fi
 
-      - name: Run extra plugin fetcher (optional)
-        run: bash scripts/ext_packages.sh || echo "No ext_packages.sh script found"
+      - name: Run customize.sh
+        run: |
+          cd openwrt
+          ./customize.sh
 
-      - name: Cache downloads
-        uses: actions/cache@v4
-        with:
-          path: |
-            openwrt/dl
-            openwrt/tmp
-          key: dl-cache-${{ hashFiles('config/.config') }}
-          restore-keys: |
-            dl-cache-
-
-      - name: Generate config
+      - name: Make defconfig and download sources
         run: |
           cd openwrt
           make defconfig
+          make download -j8
 
-      - name: Download source packages
+      - name: Build OpenWrt (x86_64 only)
         run: |
           cd openwrt
-          make download -j2
+          make -j$(nproc) || make -j1 V=s
 
-      - name: Start compiling
-        run: |
-          cd openwrt
-          make -j2 V=s 2>&1 | tee build.log
-
-      - name: Upload firmware
+      - name: Upload firmware artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt-x86_64
-          path: openwrt/bin/targets/x86/64/
+          name: OpenWrt-x86_64-firmware
+          path: openwrt/bin/targets/x86/64/**/*
 
-      - name: Upload build logs (on failure)
-        if: failure()
-        uses: actions/upload-artifact@v4
+      - name: Create GitHub Release and upload firmware
+        uses: ncipollo/release-action@v1
         with:
-          name: build-logs
-          path: openwrt/build.log
+          tag: openwrt-x86_64-$(date +'%Y%m%d-%H%M')
+          name: OpenWrt x86_64 Build $(date +'%Y-%m-%d %H:%M')
+          body: |
+            🎉 OpenWrt x86_64 自动构建成功！
+            📅 编译时间：$(date +'%Y-%m-%d %H:%M')
+          artifacts: openwrt/bin/targets/x86/64/**/*
