--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt update
-          sudo apt install -y build-essential clang flex bison g++ gawk \
+          sudo apt-get update
+          sudo apt-get install -y build-essential clang flex bison g++ gawk \
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-            python3-distutils rsync unzip zlib1g-dev file wget python3-pyelftools ccache
-
+            python3.10-distutils rsync unzip zlib1g-dev file wget python3-pyelftools ccache
+            
       - name: Prepare large disk area
         run: |
           rm -rf openwrt
