--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo add-apt-repository universe
           sudo apt-get update
-          sudo apt-get install -y build-essential clang flex bison g++ gawk \
+          sudo apt-get install -y python3-distutils build-essential clang flex bison g++ gawk \
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-            python3.10-distutils rsync unzip zlib1g-dev file wget python3-pyelftools ccache
+            rsync unzip zlib1g-dev file wget python3-pyelftools ccache             
             
       - name: Prepare large disk area
         run: |
