--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,15 @@ jobs:
           sudo apt-get clean
           df -h
 
-      - name: Install dependencies
+      - name: Enable universe repo and install dependencies
         run: |
           sudo add-apt-repository universe
           sudo apt-get update
-          sudo apt-get install -y python3.11-distutils build-essential clang flex bison g++ gawk \
+          sudo apt-get install -y python3 python3-setuptools python3-distutils-extra \
+            build-essential clang flex bison g++ gawk \
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-            rsync unzip zlib1g-dev file wget python3-pyelftools ccache           
+            rsync unzip zlib1g-dev file wget python3-pyelftools ccache
+         
             
       - name: Prepare large disk area
         run: |
