--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: Build OpenWrt x86_64
 on:
   workflow_dispatch:
   #push:
-    #branches:
-      #- main
+  #  branches:
+  #    - main
 
 jobs:
   build:
@@ -28,23 +28,23 @@ jobs:
             build-essential clang flex bison g++ gawk \
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
             rsync unzip zlib1g-dev file wget python3-pyelftools ccache
-         
-            
-      - name: Prepare large disk area
+
+      - name: Prepare openwrt build directory
         run: |
           rm -rf openwrt
-          mkdir -p /mnt/openwrt
-          ln -s /mnt/openwrt ./openwrt
-
-      - name: Prepare openwrt directory
-        run: rm -rf openwrt
+          mkdir -p openwrt
 
       - name: Clone latest OpenWrt source
         run: |
           git clone https://github.com/openwrt/openwrt.git --depth=1 openwrt
-          cd openwrt
-          cp ../config/feeds.conf.default ./feeds.conf.default
 
+      - name: Copy feeds.conf.default
+        run: |
+          if [ -f config/feeds.conf.default ]; then
+            cp config/feeds.conf.default openwrt/feeds.conf.default
+          else
+            echo "No feeds.conf.default found in config/, skipping copy"
+          fi
 
       - name: Update & install feeds
         run: |
@@ -93,9 +93,9 @@ jobs:
       - name: Create GitHub Release and upload firmware
         uses: ncipollo/release-action@v1
         with:
-          tag: openwrt-x86_64-$(date +'%Y%m%d-%H%M')
-          name: OpenWrt x86_64 Build $(date +'%Y-%m-%d %H:%M')
+          tag: openwrt-x86_64-${{ github.run_id }}
+          name: OpenWrt x86_64 Build ${{ github.run_number }}
           body: |
             🎉 OpenWrt x86_64 自动构建成功！
-            📅 编译时间：$(date +'%Y-%m-%d %H:%M')
+            📅 编译时间：${{ github.event.workflow_dispatch.timestamp }}
           artifacts: openwrt/bin/targets/x86/64/**/*
