--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build OpenWrt x86_64
 
 on:
   workflow_dispatch:
-  #push:
-  #  branches:
-  #    - main
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   build:
@@ -14,20 +14,29 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Free up disk space
-        run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-          sudo apt-get clean
-          df -h
+      - name: Free up disk space (dotnet, android, haskell, swap, etc.)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+
+      - name: Show available disk space
+        run: df -h
 
       - name: Enable universe repo and install dependencies
         run: |
           sudo add-apt-repository universe
           sudo apt-get update
-          sudo apt-get install -y python3 python3-setuptools python3-distutils-extra \
+          sudo apt-get install -y \
+            python3 python3-setuptools python3-distutils-extra \
             build-essential clang flex bison g++ gawk \
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
             rsync unzip zlib1g-dev file wget python3-pyelftools ccache
+
 
       - name: Prepare openwrt build directory
         run: |
