--- a/config/.config
+++ b/config/.config
@@ -154,7 +154,7 @@ CONFIG_GRUB_TIMEOUT="2"
 CONFIG_GRUB_TITLE="HUAWEI"
 # CONFIG_ISO_IMAGES is not set
 # CONFIG_VDI_IMAGES is not set
-CONFIG_VMDK_IMAGES=y
+# CONFIG_IMAGE_FORMAT_VMDK is not set
 # CONFIG_VHDX_IMAGES is not set
 CONFIG_TARGET_SERIAL="ttyS0"
 CONFIG_TARGET_IMAGES_GZIP=y
