--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build OpenWrt x86_64
+name: Build OpenWrt x86_64 - Full Workflow
 
 on:
   workflow_dispatch:
@@ -11,24 +11,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # 拉取完整历史，确保所有文件完整
+          fetch-depth: 0  # 拉取完整历史，避免文件缺失
 
-      - name: Free up disk space (dotnet, android, haskell, swap, etc.)
-        uses: jlumbroso/free-disk-space@main
-        with:
-          tool-cache: true
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          swap-storage: true
-
-      - name: Show available disk space
-        run: df -h
-
-      - name: Enable universe repo and install dependencies
+      - name: Install dependencies
         run: |
-          sudo add-apt-repository universe
           sudo apt-get update
           sudo apt-get install -y \
             python3 python3-setuptools python3-distutils-extra \
@@ -36,16 +22,10 @@ jobs:
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
             rsync unzip zlib1g-dev file wget python3-pyelftools ccache
 
-      - name: Prepare openwrt build directory
-        run: |
-          rm -rf openwrt
-          mkdir openwrt
+      - name: Clone OpenWrt source
+        run: git clone https://github.com/openwrt/openwrt.git --depth=1 openwrt
 
-      - name: Clone latest OpenWrt source
-        run: |
-          git clone https://github.com/openwrt/openwrt.git --depth=1 openwrt
-
-      - name: Copy feeds.conf.default if exists
+      - name: Copy feeds.conf.default
         run: |
           if [ -f config/feeds.conf.default ]; then
             cp config/feeds.conf.default openwrt/feeds.conf.default
@@ -59,31 +39,26 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      - name: Copy .config, customize.sh and scripts folder
+      - name: Copy config and scripts
         run: |
           cp config/.config openwrt/.config
           cp config/customize.sh openwrt/
-          cp -r scripts openwrt/scripts
+          cp -r scripts/. openwrt/scripts/
           chmod +x openwrt/customize.sh openwrt/scripts/*.sh
 
-      - name: List openwrt/scripts contents before running ext_packages.sh
+      - name: List openwrt/scripts contents
         run: ls -l openwrt/scripts
 
-      - name: Show first 20 lines of ext_packages.sh
+      - name: Run ext_packages.sh if present
         run: |
-          if [ -f openwrt/scripts/ext_packages.sh ]; then
-            head -n 20 openwrt/scripts/ext_packages.sh
+          cd openwrt
+          if [ -f scripts/ext_packages.sh ]; then
+            chmod +x scripts/ext_packages.sh
+            ./scripts/ext_packages.sh
           else
-            echo "❌ ext_packages.sh 不存在！"
+            echo "❌ ext_packages.sh not found!"
             exit 1
           fi
-
-      - name: Run ext_packages.sh with debug output
-        run: |
-          set -x
-          cd openwrt
-          chmod +x scripts/ext_packages.sh
-          ./scripts/ext_packages.sh
 
       - name: Clean customize.sh to remove internal 'cd openwrt'
         run: sed -i '/cd openwrt/d' openwrt/customize.sh
@@ -100,7 +75,7 @@ jobs:
           make defconfig
           make download -j8
 
-      - name: Build OpenWrt (x86_64 only)
+      - name: Build OpenWrt (x86_64)
         run: |
           cd openwrt
           make -j$(nproc) || make -j1 V=s
