--- a/config/.config
+++ b/config/.config
@@ -138,12 +138,15 @@ CONFIG_EXTERNAL_CPIO=""
 
 #
 # Root filesystem images
-#
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
+
+# UBIFS settings (可保留，默认不影响 x86_64 编译)
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
+
+# GRUB 设置，只启用 EFI 镜像
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 # CONFIG_GRUB_CONSOLE is not set
@@ -152,12 +155,19 @@ CONFIG_GRUB_BAUDRATE=115200
 CONFIG_GRUB_BOOTOPTS=""
 CONFIG_GRUB_TIMEOUT="2"
 CONFIG_GRUB_TITLE="HUAWEI"
+
+# 禁用所有其他镜像格式
 # CONFIG_ISO_IMAGES is not set
 # CONFIG_VDI_IMAGES is not set
-CONFIG_VMDK_IMAGES=y
+# CONFIG_VMDK_IMAGES is not set
 # CONFIG_VHDX_IMAGES is not set
+
+# 串口设置（默认即可）
 CONFIG_TARGET_SERIAL="ttyS0"
+
+# 打包为 gzip 格式（.img.gz）
 CONFIG_TARGET_IMAGES_GZIP=y
+
 
 #
 # Image Options
