--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,6 +105,7 @@ jobs:
           name: openwrt-scripts-debug
           path: openwrt/scripts
 
+      # 这里用 GH_TOKEN 作为 token 变量
       - name: Create GitHub Release and upload firmware
         uses: ncipollo/release-action@v1
         with:
@@ -114,3 +115,4 @@ jobs:
             🎉 OpenWrt x86_64 自动构建成功！
             📅 编译时间：${{ github.event.workflow_dispatch.timestamp }}
           artifacts: openwrt/bin/targets/x86/64/**/*
+          token: ${{ secrets.GH_TOKEN }}
